--- a/nimbus/storages/templates/storages_edit.html
+++ b/nimbus/storages/templates/storages_edit.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block page %}
 
@@ -14,7 +15,7 @@
     
         <form method="post" action="">
             {% include "form.html" %}
-            <p><button type="submit" class="css3button big positive" value="Atualizar">Atualizar</button></p>
+            <p><button type="submit" class="css3button big positive" value="Atualizar">{% trans "Update" %}</button></p>
         </form>
     
     </div>
