--- a/nimbus/storages/templates/storages_view.html
+++ b/nimbus/storages/templates/storages_view.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block headtags %}
 <script type="text/javascript" src="/media/js/storages.js"></script>
@@ -16,7 +17,7 @@
 	</div>
 
     <div class="block_content">
-        <p><a href="/storages/add">Adicionar armazenamento</a> • <a href="/storages/list">Visualizar todos os armazenamentos</a></p>
+        <p><a href="/storages/add">{% trans "Add Storage"%}</a> • <a href="/storages/list">{% trans "View all storages" %}</a></p>
         <div class="storages">
             <div class="storage">
                 <div class="left">
@@ -26,16 +27,16 @@
                         <small class="ip">{{storage.address}}</small>
                     </div>
                     <p class="description">{{storage.description}}</p>
-                    <p class="options"><a href="/storages/{{storage.id}}/edit/">Editar</a></p>
+                    <p class="options"><a href="/storages/{{storage.id}}/edit/">{% trans "Edit" %}</a></p>
                     
                 </div>
                 <div class="right">
                     {% if not storage.procedure_set.count %}
                         <div class="message warning">
-                            <p>Não existem procedimentos relacionados a este armazenamento.</p>
+                            <p>{% trans "No related procedures" %}</p>
                         </div>
                     {% else %}
-                        <h4>COMPUTADORES RELACIONADOS</h4>
+                    <h4>{% trans "RELATED COMPUTERS" %}</h4>
                         
                         <div id="computer-list">
                         {% for computer in storage.get_computers %}
@@ -48,10 +49,10 @@
                                 </div>
                                 <div class="computer_detail" class="hidden">
                                     {% for proc in computer.procedure_set.all %}
-                                        <h4 class="name">{{proc.name}} <small><a href="{% url nimbus.procedures.views.edit procedure_id=proc.id %}">(editar)</a></small></h4>
-                                        Offsite ativado: {% if proc.offsite_on %}Sim{% else %}Não{% endif %}<br/>
-                                        Agendamento: {{proc.schedule}}<br/>
-                                        Conjunto de arquivos: {{proc.fileset}}
+                                    <h4 class="name">{{proc.name}} <small><a href="{% url nimbus.procedures.views.edit procedure_id=proc.id %}">({% trans "edit"%})</a></small></h4>
+                                        {% trans "Offsite enabled:" %} {% if proc.offsite_on %}{% trans "Yes"%}{% else %}{% trans "No"%}{% endif %}<br/>
+                                        {% trans "Schedule:" %} {{proc.schedule}}<br/>
+                                        {% trans "File sets:" %} {{proc.fileset}}
                                         <p></p>
                                     {% endfor %}
                                 </div>
@@ -65,7 +66,7 @@
         </div>
         
         <div class="block-executados">
-            <h3>Espaço em disco</h3>
+            <h3>{% trans "Disk Space" %}</h3>
             {% with espaco_em_disco as value %}
 		        {% include "bar_chart.html" %}
 		    {% endwith %}
