--- a/nimbus/schedules/templates/add_schedule.html
+++ b/nimbus/schedules/templates/add_schedule.html
@@ -1,3 +1,4 @@
+{% load i18n  %}
 {% block headtags %}
 	<link rel="stylesheet" type="text/css" href="/media/css/overcast/jquery-ui-1.8.13.custom.css" />
 	<link rel="stylesheet" type="text/css" href="/media/lib/css/style.css" />
@@ -38,7 +39,7 @@
 	<tr class="border">
 		<td>
 			<div id="month" class="checkboxes">
-				<h3>Dia do mês:</h3>
+                <h3>{% trans "Day:"%}</h3>
 				<input type="checkbox" class="month" id="month_01" name="01"/><label for="month_01">01</label>
 				<input type="checkbox" class="month" id="month_02" name="02"/><label for="month_02">02</label>
 				<input type="checkbox" class="month" id="month_03" name="03"/><label for="month_03">03</label>
@@ -78,20 +79,20 @@
 				<option value="{{level.id}}">{{level.name}}</option>
 				{% endfor %}
 			</select><br />
-			<a class="css3button positive" id="month_button"><span>Agendamento Mensal</span></a>
+            <a class="css3button positive" id="month_button"><span>{% trans "Monthly Schedule"%}</span></a>
 		</td>
 	</tr>
 	<tr class="border">
 		<td>
 			<div id="week" class="checkboxes">
-				<h3>Dia da semana:</h3>
-				<input type="checkbox" class="week" id="week_0" value="0" /><label for="week_0">Dom</label>
-				<input type="checkbox" class="week" id="week_1" value="0" /><label for="week_1">Seg</label>
-				<input type="checkbox" class="week" id="week_2" value="0" /><label for="week_2">Ter</label>
-				<input type="checkbox" class="week" id="week_3" value="0" /><label for="week_3">Qua</label>
-				<input type="checkbox" class="week" id="week_4" value="0" /><label for="week_4">Qui</label>
-				<input type="checkbox" class="week" id="week_5" value="0" /><label for="week_5">Sex</label>
-				<input type="checkbox" class="week" id="week_6" value="0" /><label for="week_6">Sáb</label>
+                <h3>{% trans "Weekday:"%}</h3>
+                <input type="checkbox" class="week" id="week_0" value="0" /><label for="week_0">{% trans "Sun"%}</label>
+                <input type="checkbox" class="week" id="week_1" value="0" /><label for="week_1">{% trans "Mon"%}</label>
+                <input type="checkbox" class="week" id="week_2" value="0" /><label for="week_2">{% trans "Tue"%}</label>
+                <input type="checkbox" class="week" id="week_3" value="0" /><label for="week_3">{% trans "Wed"%}</label>
+                <input type="checkbox" class="week" id="week_4" value="0" /><label for="week_4">{% trans "Thu"%}</label>
+                <input type="checkbox" class="week" id="week_5" value="0" /><label for="week_5">{% trans "Fri"%}</label>
+                <input type="checkbox" class="week" id="week_6" value="0" /><label for="week_6">{% trans "Sat"%}</label>
 			</div>
 		</td>
 		<td>
@@ -100,13 +101,13 @@
 				<option value="{{level.id}}">{{level.name}}</option>
 				{% endfor %}
 			</select><br />
-			<a class="css3button positive" id="week_button"><span>Agendamento Semanal</span></a>
+            <a class="css3button positive" id="week_button"><span>{% trans "Weekly Schedule" %}</span></a>
 		</td>
 	</tr>
 	<tr class="border">
 		<td>
 			<div id="hours" class="checkboxes">
-				<h3>Hora:</h3>
+                <h3>{% trans "Hour:"%}</h3>
 				<input type="checkbox" class="hours" id="hour_00" checked="checked" /><label for="hour_00">00</label>
 				<input type="checkbox" class="hours" id="hour_01" /><label for="hour_01">01</label>
 				<input type="checkbox" class="hours" id="hour_02" /><label for="hour_02">02</label>
@@ -139,13 +140,13 @@
 				<option value="{{level.id}}">{{level.name}}</option>
 				{% endfor %}
 			</select><br />
-			<a class="css3button positive" id="day_button"><span>Agendamento Diário</span></a>
+            <a class="css3button positive" id="day_button"><span>{% trans "Daily Schedule"%}</span></a>
 		</td>
 	</tr>
 	<tr class="border">
 		<td>
 			<div id="minutes" class="checkboxes">
-				<h3>Minuto:</h3>
+                <h3>{% trans "Minute:" %}</h3>
 				<input type="checkbox" class="minutes" id="minute_00" checked="checked" /><label for="minute_00">00</label>
 				<input type="checkbox" class="minutes" id="minute_01" /><label for="minute_01">01</label>
 				<input type="checkbox" class="minutes" id="minute_02" /><label for="minute_02">02</label>
@@ -215,32 +216,32 @@
 				<option value="{{level.id}}">{{level.name}}</option>
 				{% endfor %}
 			</select><br />
-			<a class="css3button positive" id="hour_button"><span>Agendamento a cada hora</span></a>
+            <a class="css3button positive" id="hour_button"><span>{% trans "Hourly Schedule"%}</span></a>
 		</td>
 	</tr>
 </table>
 </div>
-<h3>Agendamentos selecionados</h3>
+<h3>{% trans "Selected schedules" %}</h3>
 <div id="schedules_made">
 <table id="inventory" cellpadding="0" cellspacing="0">
 	<thead>
-		<tr><th>&nbsp;</th><th>Tipo</th><th>Frequência</th><th>Dia</th><th>Hora</th></tr>
+        <tr><th>&nbsp;</th><th>{% trans "Type"%}</th><th>{% trans "Rate"%}</th><th>{% trans "Day"%}</th><th>{% trans "Hour"%}</th></tr>
 	</thead>
 	<tbody></tbody>
 </table>
 {% if is_model %}
 <p>
-	<label>Nome:</label>
+<label>{% trans "Name:"%}</label>
 	<input type="text" id="schedule_name"/>
 </p>
 {% else %}
-<input type="hidden" id="schedule_name" value="Apenas para este procedimento"/>
+<input type="hidden" id="schedule_name" value="{% trans "Only this schedule"%}"/>
 {% endif %}
 </div>
 {% if reload %}
-<a href="#" onclick="if (create_schedule() == true) {window.location.reload()}" class="css3button big positive"><span>Criar Agendamento</span></a>
+<a href="#" onclick="if (create_schedule() == true) {window.location.reload()}" class="css3button big positive"><span>{% trans "Add schedule"%}</span></a>
 {% else %}
-<a href="#" onclick="create_schedule()" class="css3button positive big"><span>Criar Agendamento</span></a>
+<a href="#" onclick="create_schedule()" class="css3button positive big"><span>{% trans "Add schedule"%}</span></a>
 {% endif %}
 
 {% endblock %}
