--- a/nimbus/schedules/templates/remove_schedule.html
+++ b/nimbus/schedules/templates/remove_schedule.html
@@ -11,25 +11,25 @@
 	<div class="block_head">
 		<div class="bheadl"></div>
 		<div class="bheadr"></div>
-		<h2>Confirmação de remoção</h2>
+        <h2>{% trans "Removal Confirmation"%}</h2>
 	</div>		<!-- .block_head ends -->
 
     <div class="block_content">
         <form method="post" action="">
-            <h1>Você está prestes a remover o agendamento "{{schedule.name}}".</h1>
+            <h1>{% trans "You are about to remove schedule" %} "{{schedule.name}}".</h1>
 				{% if procedures %}
 				Os seguintes procedimentos de backup utilizam este agendamento:
+                {% trans "The following backups are using this schedule" %}:
 					{% for procedure in procedures %}
 				<li>{{procedure.name}}</li>
 					{% endfor %}
-				Remover este agendamento não afetará o funcionamento dos backups listados.
+                {% trans "Removing this schedule won't effect any of the previous backups." %}
 				{% else %}
-				Não existe nenhum procedimento de backup utilizando este agendamento.
+                {% trans "There is no backup using this schedule." %}
 				{% endif %}
 			<br />
-            <p><strong>Esta operação não poderá ser desfeita. Deseja prosseguir mesmo assim?</strong></p>
+            <p><strong>{% trans "This operation cannot be undone, are you sure you want to proceed?" %}</strong></p>
             <p>
-                <!-- <input type="submit" class="css3button positive" name="confirm" value="Prosseguir" /> ou <a href="" onclick="history.back(-1); return false;">Cancelar</a> -->
                 <a href="/schedules/do_delete/{{schedule.id}}" class="css3button negative">{% trans "Remove"%}</a> ou <a href="" class="css3button positive" onclick="history.back(-1); return false;">{% trans "Cancel"%}</a>
             </p>
         </form>
