--- a/nimbus/restore/templates/step2.html
+++ b/nimbus/restore/templates/step2.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block headtags %}
 <link rel="stylesheet" type="text/css" href="/media/css/restore.css" />
@@ -15,28 +16,28 @@
 	</div>
 
     <div class="block_content">
-	<h2>Passo 2: Selecionar o procedimento</h2><br />
+    <h2>{% trans "Step 2: Select procedure"%}</h2><br />
         <form action="/restore/step3/" id="step2_form" method="post">
 			<p>
-				<label>Computador:</label> {{computer.name}}
+                <label>{% trans "Computer"%}:</label> {{computer.name}}
 			</p>
 			<p>
-                <label for="procedure_id">Selecione o procedimento:</label>
+                <label for="procedure_id">{% trans "Select procedure"%}:</label>
                 <select name="procedure_id" id="procedure_id" >
-                    <option value=""> - Selecione - </option>
+                    <option value=""> - {%trans "Select"%} - </option>
                     {% for procedure in computer.procedure_set.all %}
 					{% if procedure.all_my_good_jobs|length == 1%}
-                    <option value="{{procedure.id}}">{{procedure.name}} ({{procedure.all_my_good_jobs|length}} backup disponível)</option>
+                    <option value="{{procedure.id}}">{{procedure.name}} ({{procedure.all_my_good_jobs|length}} {%trans "available backup"%})</option>
 					{% else %}
-                    <option value="{{procedure.id}}">{{procedure.name}} ({{procedure.all_my_good_jobs|length}} backups disponíveis)</option>
+                    <option value="{{procedure.id}}">{{procedure.name}} ({{procedure.all_my_good_jobs|length}} {%trans "available backups"%})</option>
 					{% endif %}
                     {% endfor %}
                 </select>
             </p>
 			<input type="hidden" name="computer_id" value="{{computer.id}}"></input>
 			<div>
-				<a href="/restore/step1/" class="css3button negative last_step"><span>Voltar ao passo 1: Escolher o computador</span></a>
-				<button type="submit" class="css3button positive next_step" onClick="if ($('#step2_form')[0].procedure_id.value == '') {alert('Nenhum procedimento foi selecionado'); return false}">Passo 3 - Escolher o backup</button>
+                <a href="/restore/step1/" class="css3button negative last_step"><span>{% trans "Back to step 1: Select computer"%}</span></a>
+                <button type="submit" class="css3button positive next_step" onClick="if ($('#step2_form')[0].procedure_id.value == '') {alert('{% trans "No procedure has been selected"%}'); return false}">{% trans "Step 3: Select backup"%}</button>
 			</div>
         </form>
         
